[gd_scene load_steps=3 format=3 uid="uid://cttwlid51evdd"]

[ext_resource type="Script" path="res://grid/point.gd" id="1_6ht4v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hs63x"]

[node name="Point" type="Node2D"]
script = ExtResource("1_6ht4v")

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(8, 8)
polygon = PackedVector2Array(0, -1, 0, -1, 1, 0, 0, 1, -1, 0, 0, -1)

[node name="MouseArea" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
scale = Vector2(3.2, 3.2)
shape = SubResource("CircleShape2D_hs63x")

[connection signal="input_event" from="MouseArea" to="." method="_on_mouse_area_input_event"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_area_mouse_entered"]
